--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head ng-app="portfolio">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hello</div>
-    <div><a ui-sref="projects">projects</a></div>
-
+    <a ui-sref="projects">projects</a>
+    <ui-view></ui-view>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
