--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head ng-app="portfolio">
+<html ng-app="portfolio">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='./dist/all.css'>
     <title>Document</title>
 </head>
-<body>
-    <a ui-sref="projects">projects</a>
-    <ui-view></ui-view>
+<body ng-controller="portCtrl">
+    {{getit}}
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
     <script src="./dist/all.js"></script>
-    <!-- <script src="https://sdk.auth0.com/auth0.js#client=vgbD7JM3eD6qdkNxMkesdAIK0tsl-Onl"></script> -->
-
+    
 </body>
 </html>
