--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body ng-controller="portCtrl">
-    {{getit}}
+    <a ui-sref="home">home</a>
+    <a ui-sref="projects">projects</a>
+
+    <ui-view></ui-view>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
